agregando cambios para el consumo de los antecedentes

--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 PORT=8085
 JWT_SECRET=V1v414C0ntr4c10n3s
 WHITE_LIST=http://localhost:4200
-DB_SERVER=localhost
-DB_USER=sa
-DB_PASSWORD="Luc14n4V"
-DB_DATABASE=Ocupacional
+DB_SERVER=204.13.235.90
+DB_USER=developer
+DB_PASSWORD="D3v3l0p3r2024$"
+DB_DATABASE=ocupacional
 DB_PORT=1433
 DB_ENCRYPT=0 #0 = false, 1 = true
 DB_TRUST_CERTIFICATE=0 #0 = false, 1 = true
