--- a/.env
+++ b/.env
@@ -8,3 +8,5 @@ DB_DATABASE=ocupacional
 DB_PORT=1433
 DB_ENCRYPT=0 #0 = false, 1 = true
 DB_TRUST_CERTIFICATE=0 #0 = false, 1 = true
+
+URL_API_PRODUCTION=http://localhost:8085
