agregando cambios para el manejo de envios de email luego de crear la orden

--- a/.env
+++ b/.env
@@ -10,3 +10,9 @@ DB_ENCRYPT=0 #0 = false, 1 = true
 DB_TRUST_CERTIFICATE=0 #0 = false, 1 = true
 
 URL_API_PRODUCTION=http://localhost:8085
+URL_APP_PRODUCTION=http://localhost:4200
+
+USER_EMAIL=mobilsoftdevelop@gmail.com
+PASS_EMAIL=iiuinqkqfxlhxxtt
+SERVER_EMAIL=smtp.gmail.com
+PORT_EMAIL=465
