--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/class-transformer": "^0.4.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
@@ -29,10 +30,14 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.7",
+    "ejs": "^3.1.10",
+    "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "mssql": "^11.0.1",
-    "passport-jwt": "^4.0.1",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.10.0",
+    "nodemailer-smtp-transport": "^2.7.4",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
@@ -44,7 +49,7 @@
     "@types/jest": "29.2.4",
     "@types/mssql": "^9.1.6",
     "@types/multer": "^1.4.8",
-    "@types/node": "18.11.18",
+    "@types/node": "^18.11.18",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
